--- a/.html/index.html
+++ b/.html/index.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Zoo Project</title>
 </head>
-<body>
+<body style="background-color: #4C5F28;">
 
     <div> <!--Inizio Nav-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -33,7 +33,12 @@
     </div> <!--Fine Nav bar -->
 
 
-
+    <div id="Layer1" style="position:absolute; left:10px;  z-index:1">
+      <img src="../img/mappa zoo/mappa.png" style="width: 800px; margin-left: 350px;">
+    </div>
+    <div id="Layer2" style="position:absolute; left:10px; z-index:2">
+      <img src="../img/mappa zoo/africa.png "  style="width: 380px; margin-left: 735px; margin-top: 200px;">
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     
