--- a/.html/lavoratori.html
+++ b/.html/lavoratori.html
@@ -20,10 +20,12 @@
                     <button class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                       Options
                     </button>
-                    <ul class="dropdown-menu dropdown-menu-light">
-                      <li><a class="dropdown-item" href="index.html">Home</a></li>
-                      <li><a class="dropdown-item" href="#">Workers Area</a></li>
-                    </ul>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Pricing</a>
+                    </li>
                   </li>
                 </ul>
               </div>
