--- a/.html/index.html
+++ b/.html/index.html
@@ -16,16 +16,12 @@
                   </a>
               <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
                 <ul class="navbar-nav">
-                  <li class="nav-item dropdown">
-                    <button class="btn btn-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                      Options
-                    </button>
-                    <ul class="dropdown-menu dropdown-menu-light">
-                      <li><a class="dropdown-item" href="#">Home</a></li>
-                      <li><a class="dropdown-item" href="#">Reservations</a></li>
-                      <li><a class="dropdown-item" href="lavoratori.html">Workers Area</a></li>
-                    </ul>
-                  </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Pricing</a>
+                    </li>
                 </ul>
               </div>
             </div>
