--- a/.html/index.html
+++ b/.html/index.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Zoo Project</title>
 </head>
-<body style="background-color: #f7f8f4;">
+<body style="background-color: #4C5F28;">
 
     <div> <!--Inizio Nav-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -49,6 +49,12 @@
     <div id="Layer2" style="position:absolute; left:10px; z-index:2">
       <a  href="lavoratori.html" >
         <img src="../img/mappa zoo/asian_passage.png "  style="width: 160px; margin-left: 620px; margin-top: 280px;">
+      </a>
+    </div>
+    <!--foto3, asian -->
+    <div id="Layer2" style="position:absolute; left:10px; z-index:2">
+      <a  href="lavoratori.html" >
+        <img src="../img/mappa zoo/verdino.png"  style="width: 150px; margin-left: 497px; margin-top: 330px;">
       </a>
     </div>
 
