--- a/.html/index.html
+++ b/.html/index.html
@@ -20,7 +20,7 @@
                       <a class="nav-link" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Working area</a>
+                      <a class="nav-link" href="lavoratori.html">Working area</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="#">About us</a>
@@ -59,6 +59,12 @@
         <img src="../img/mappa zoo/verdino.png"  style="width: 150px; margin-left: 497px; margin-top: 330px;">
       </a>
     </div>
+   <!--foto4, pleistocene--> 
+   <div id="Layer2" style="position:absolute; left:10px; z-index:2">
+    <a  href="lavoratori.html" >
+      <img src="../img/mappa zoo/pleistocene.png" style="width: 240px; margin-left: 497px; margin-top: 330px;">
+    </a>
+  </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     
