--- a/.html/index.html
+++ b/.html/index.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Zoo Project</title>
 </head>
-<body>
+<body style="background-color: #4C5F28;">
 
     <div> <!--Inizio Nav-->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -62,7 +62,19 @@
    <!--foto4, pleistocene--> 
    <div id="Layer2" style="position:absolute; left:10px; z-index:2">
     <a  href="lavoratori.html" >
-      <img src="../img/mappa zoo/pleistocene.png" style="width: 240px; margin-left: 497px; margin-top: 330px;">
+      <img src="../img/mappa zoo/pleistocene.png" style="width: 255px; margin-left: 465px; margin-top: 35px;">
+    </a>
+  </div>
+  <!--foto5, grizzly--> 
+  <div id="Layer2" style="position:absolute; left:10px; z-index:2">
+    <a  href="lavoratori.html" >
+      <img src="../img/mappa zoo/grizzly_gulch.png" style="width: 160px; margin-left: 690px; margin-top: 30px;">
+    </a>
+  </div>
+  <!--foto6, fallenforest--> 
+  <div id="Layer2" style="position:absolute; left:10px; z-index:2">
+    <a  href="lavoratori.html" >
+      <img src="../img/mappa zoo/fallen_forset.png" style="width: 275px; margin-left: 712px; margin-top: 92px;">
     </a>
   </div>
 
