--- a/.html/index.html
+++ b/.html/index.html
@@ -49,13 +49,13 @@
     </div>
     <!--foto2, asian -->
     <div id="Layer2" style="position:absolute; left:10px; z-index:2">
-      <a  href="lavoratori.html" >
+      <a  href="lavoratori.html"  >
         <img src="../img/mappa zoo/asian_passage.png "  style="width: 160px; margin-left: 620px; margin-top: 280px;">
       </a>
     </div>
     <!--foto3, asian -->
     <div id="Layer2" style="position:absolute; left:10px; z-index:2">
-      <a  href="lavoratori.html" >
+      <a  href="s"  >
         <img src="../img/mappa zoo/verdino.png"  style="width: 150px; margin-left: 497px; margin-top: 330px;">
       </a>
     </div>
