--- a/.html/lavoratori.html
+++ b/.html/lavoratori.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Workers Area</title>
 </head>
-<body>
+<body style = "background-color: chartreuse;">
 
   <div> <!--Inizio Nav-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -25,16 +25,13 @@
                 <li class="nav-item">
                   <a class="nav-link" href="#">About us</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Login</a>
-                </li>
             </ul>
           </div>
         </div>
       </nav>
 </div> <!--Fine Nav bar -->
 
-    <div> <!-- inizio form-->
+    <div > <!-- inizio form-->
 
         <form style="width: 300px; margin-left: 600px;margin-top: 150px;">
             <div class="mb-3" >
