--- a/.html/lavoratori.html
+++ b/.html/lavoratori.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Workers Area</title>
 </head>
-<body style = "background-color: chartreuse;">
+<body >
 
   <div> <!--Inizio Nav-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -32,6 +32,25 @@
 </div> <!--Fine Nav bar -->
 
     <div > <!-- inizio form-->
+
+      <script>
+        // Funzione per il controllo della password
+        function checkPassword(event) {
+            event.preventDefault(); // Evita il comportamento predefinito del form
+            const password = document.getElementById("exampleInputPassword1").value;
+
+            // Password corretta (puoi sostituirla con quella desiderata)
+            const correctPassword = "1234";
+
+            if (password === correctPassword) {
+                // Reindirizza l'utente se la password è corretta
+                window.location.href = "modifica.html"; // Cambia con il nome del tuo file index
+            } else {
+                // Mostra un messaggio di errore
+                alert("Password errata. Riprova.");
+            }
+        }
+    </script>
 
         <form style="width: 300px; margin-left: 600px;margin-top: 150px;">
             <div class="mb-3" >
