--- a/.html/lavoratori.html
+++ b/.html/lavoratori.html
@@ -6,7 +6,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Workers Area</title>
 </head>
-<body>
+<body >
 
   <div> <!--Inizio Nav-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -39,11 +39,11 @@
         <form style="width: 300px; margin-left: 600px;margin-top: 150px;">
             <div class="mb-3" >
               <label for="exampleInputEmail1" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <input type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp">
             </div>
             <div class="mb-3">
               <label for="exampleInputPassword1" class="form-label">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
+              <input type="password" class="form-control" id="InputPassword">
             </div>
             <button type="submit" class="btn btn-success">Submit</button>
             <button type="submit" class="btn btn-success">Nuovo utente</button>
@@ -51,6 +51,15 @@
 
     </div><!--fine form-->
 
+    <script  type="text/javascript">
+      var email =document.getElementById("InputEmail").value;
+      var pass =document.getElementById("InputPassword").value;
+      if(email == "emma@gmail.com" && pass == "emma")
+      {
+        
+      }
+
+    </script>
 
 
 
