--- a/.html/registrazione.html
+++ b/.html/registrazione.html
@@ -6,6 +6,7 @@
     <title>Tabella</title>
 </head>
 <body>
+    <img src="..//img/pavone.jpg" alt="" width="1824 x 768 pixel"  style="background-image: -moz-element();">
      <p>ciao</p>
 
 </body>
