--- a/.html/lavoratori.html
+++ b/.html/lavoratori.html
@@ -59,10 +59,9 @@
           <input type="password" class="form-control" id="exampleInputPassword1" required>
       </div>
       <button type="submit" class="btn btn-success">Submit</button>
-      <button type="button" class="btn btn-secondary" onclick="window.location.href='new_user.html'">Nuovo utente</button>
+      <button type="button" class="btn btn-secondary" onclick="window.location.href='agg-togli.html'">Nuovo utente</button>
   </form>
 </div>
-
 
 
 
