--- a/.html/agg-togli.html
+++ b/.html/agg-togli.html
@@ -11,7 +11,7 @@
     <div>
         <br><br><br>
     </div>
-    <div class="container text-center" style="background-color: blueviolet;">
+    <div class="container text-center" style="background-color: rgb(207, 187, 226);">
         <div class="row">
             <div class="col"></div>
           <div class="col">Id</div>
@@ -21,7 +21,7 @@
           <div class="col"></div>
           
         </div>
-        <div class="row" style="background-color: rgb(22, 190, 22);">
+        <div class="row" style="background-color: rgb(182, 238, 182);">
             <div class="col"> <button type="button" class="btn btn-warning">Edit</button> </div>
             <div class="col">Id</div>
             <div class="col">Area</div>
