--- a/.html/index.html
+++ b/.html/index.html
@@ -55,19 +55,19 @@
     </div>
     <!--foto3, asian -->
     <div id="Layer2" style="position:absolute; left:10px; z-index:2">
-      <a  href="s"  >
+      <a  href=".html-admin/Ingresso.html"  >
         <img src="../img/mappa zoo/verdino.png"  style="width: 150px; margin-left: 497px; margin-top: 330px;">
       </a>
     </div>
    <!--foto4, pleistocene--> 
    <div id="Layer2" style="position:absolute; left:10px; z-index:2">
-    <a  href="lavoratori.html" >
+    <a  href=".html-admin/Desert.html" >
       <img src="../img/mappa zoo/pleistocene.png" style="width: 255px; margin-left: 465px; margin-top: 35px;">
     </a>
   </div>
   <!--foto5, grizzly--> 
   <div id="Layer2" style="position:absolute; left:10px; z-index:2">
-    <a  href="lavoratori.html" >
+    <a  href=".html-admin/Desert.html" >
       <img src="../img/mappa zoo/grizzly_gulch.png" style="width: 160px; margin-left: 690px; margin-top: 30px;">
     </a>
   </div>
