--- a/.html/index.html
+++ b/.html/index.html
@@ -46,7 +46,7 @@
     </div>
     <!--foto2, asian -->
     <div id="Layer2" style="position:absolute; left:10px; z-index:2">
-      <a  href="lavoratori.html"  >
+      <a  href=".html-admin/Asia.html"  >
         <img src="../img/mappa zoo/asian_passage.png "  style="width: 160px; margin-left: 620px; margin-top: 280px;">
       </a>
     </div>
