--- a/.html/agg-togli.html
+++ b/.html/agg-togli.html
@@ -61,7 +61,7 @@
                       <span class="input-group-text" id="inputGroup-sizing-sm">Animal Weight</span>
                       <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-sm">
                     </div>
-                    <button>ADD</button>
+                    <button type="button" class="btn btn-success">Add animal</button>
                 </div></div></div></div> </div>
 
     <table class="table">
