--- a/.html/index.html
+++ b/.html/index.html
@@ -23,7 +23,7 @@
                       <a class="nav-link" href="lavoratori.html">Working area</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">About us</a>
+                      <a class="nav-link" href="about-us.html">About us</a>
                     </li>
                 </ul>
               </div>
