--- a/.html/about-us.html
+++ b/.html/about-us.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 </head>
 <body style="background-color: #4C5F28;">
     <div> <!--Inizio Nav-->
@@ -47,10 +49,122 @@
         </ul>
       </nav>
       <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-root-margin="0px 0px -40%" data-bs-smooth-scroll="true" class="scrollspy-example bg-body-tertiary p-3 rounded-2" tabindex="0">
-        <h4 id="scrollspyHeading1">First heading</h4>
-        <p>...</p>
+        <h4 id="scrollspyHeading1">General information</h4>
+        <p>
+            <body>
+                <header>
+                    <h1>About Our Zoo</h1>
+                </header>
+                <main>
+                    <section>
+                        <h2>Purposes of a Zoo</h2>
+                        <ul>
+                            <li>
+                                <strong>Conservation:</strong>
+                                <ul>
+                                    <li>Many zoos work to protect endangered species through breeding programs and reintroduction efforts.</li>
+                                    <li>They collaborate with international organizations to safeguard natural habitats.</li>
+                                </ul>
+                            </li>
+                            <li>
+                                <strong>Education:</strong>
+                                <ul>
+                                    <li>Zoos raise public awareness about biodiversity and environmental challenges.</li>
+                                    <li>They offer educational programs for schools, families, and the general public.</li>
+                                </ul>
+                            </li>
+                            <li>
+                                <strong>Research:</strong>
+                                <ul>
+                                    <li>Experts study animal behavior, health, and ecology to enhance conservation efforts.</li>
+                                    <li>Research conducted in zoos provides valuable insights into species' needs in the wild.</li>
+                                </ul>
+                            </li>
+                            <li>
+                                <strong>Recreation:</strong>
+                                <ul>
+                                    <li>Zoos are popular recreational destinations for visitors of all ages, featuring interactive exhibits and family-friendly attractions.</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h2>Types of Zoos</h2>
+                        <ul>
+                            <li><strong>Traditional Zoos:</strong> Enclosed habitats with a variety of animals.</li>
+                            <li><strong>Safari Parks:</strong> Large, open areas where animals roam freely, and visitors can drive through.</li>
+                            <li><strong>Aquariums:</strong> Specialize in marine and aquatic species.</li>
+                            <li><strong>Wildlife Sanctuaries:</strong> Focus on providing refuge for rescued or rehabilitated animals.</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h2>Fun Facts About Zoos</h2>
+                        <ul>
+                            <li>The oldest zoo in the world is the Tiergarten Schönbrunn in Vienna, Austria, established in 1752.</li>
+                            <li>Modern zoos emphasize creating naturalistic habitats to mimic the animals' wild environments.</li>
+                            <li>Many zoos participate in global breeding programs for critically endangered species like the giant panda and the Amur leopard.</li>
+                        </ul>
+                    </section>
+                </main>
+                <footer>
+                    <p>Would you like more specific information about a particular zoo?</p>
+                </footer>
+            </body>
+            </html>
+        </p>
         <h4 id="scrollspyHeading2">Second heading</h4>
-        <p>...</p>
+        <p><body>
+            <header>
+                <h1>About Safari Zoos</h1>
+            </header>
+            <main>
+                <section>
+                    <h2>What is a Safari Zoo?</h2>
+                    <p>
+                        A safari zoo is a unique type of zoological park where visitors can observe animals in large, open areas 
+                        that closely resemble their natural habitats. Unlike traditional zoos, animals in a safari zoo roam freely, 
+                        and visitors typically explore the park using their own vehicles or specialized safari buses.
+                    </p>
+                </section>
+                <section>
+                    <h2>Key Features</h2>
+                    <ul>
+                        <li>
+                            <strong>Naturalistic Environments:</strong> Animals are kept in large enclosures designed to replicate their natural ecosystems.
+                        </li>
+                        <li>
+                            <strong>Close Encounters:</strong> Visitors can experience closer, safer interactions with animals, often from the comfort of their vehicle.
+                        </li>
+                        <li>
+                            <strong>Guided Tours:</strong> Many safari zoos offer guided tours in specialized vehicles with expert guides who provide insights about the animals.
+                        </li>
+                        <li>
+                            <strong>Diverse Species:</strong> Safari zoos often host a variety of animals, including large mammals such as lions, giraffes, elephants, and zebras.
+                        </li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Advantages of Safari Zoos</h2>
+                    <ul>
+                        <li>Promotes animal welfare by offering more space and natural settings.</li>
+                        <li>Creates a more immersive experience for visitors compared to traditional zoos.</li>
+                        <li>Encourages conservation and public education about wildlife.</li>
+                    </ul>
+                </section>
+                <section>
+                    <h2>Famous Safari Zoos</h2>
+                    <ul>
+                        <li><strong>San Diego Zoo Safari Park</strong> (California, USA): Known for its massive enclosures and diverse wildlife.</li>
+                        <li><strong>Longleat Safari Park</strong> (Wiltshire, UK): The first drive-through safari park outside Africa.</li>
+                        <li><strong>Pilanesberg National Park</strong> (South Africa): A famous reserve combining safari and conservation efforts.</li>
+                        <li><strong>Zoo Safari Ravenna</strong> (Italy): A popular European safari zoo offering close encounters with exotic animals.</li>
+                    </ul>
+                </section>
+            </main>
+            <footer>
+                <p>Would you like details about a specific safari zoo or tips for visiting one?</p>
+            </footer>
+        </body></p>
         <h4 id="scrollspyHeading3">Third heading</h4>
         <p>...</p>
         <h4 id="scrollspyHeading4">Fourth heading</h4>
@@ -59,4 +173,6 @@
         <p>...</p>
       </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </html>
