--- a/.html/prova.html
+++ b/.html/prova.html
@@ -89,6 +89,36 @@
             </div>
         </div>
     </div>
+    <div class="col-md-6 col-lg-4">
+        <div class="card text-center">
+            <img src="../img/mappa zoo/fallen_forset.png" class="card-img-top" alt="Asia Zone">
+            <div class="card-body">
+                <h5 class="card-title">Fallen forest Passage</h5>
+                <p class="card-text">Discover exotic tigers, red pandas, and the serene beauty of Asia.</p>
+                <a href=".html-admin/Forest.html" class="btn btn-custom">Explore Now</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6 col-lg-4">
+        <div class="card text-center">
+            <img src="../img/mappa zoo/grizzly_gulch.png" class="card-img-top" alt="Asia Zone">
+            <div class="card-body">
+                <h5 class="card-title">Grizzly gulch Passage</h5>
+                <p class="card-text">Discover exotic tigers, red pandas, and the serene beauty of Asia.</p>
+                <a href=".html-admin/Grizzly.html" class="btn btn-custom">Explore Now</a>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-6 col-lg-4">
+        <div class="card text-center">
+            <img src="../img/mappa zoo/asian_passage.png" class="card-img-top" alt="Asia Zone">
+            <div class="card-body">
+                <h5 class="card-title">Asian Passage</h5>
+                <p class="card-text">Discover exotic tigers, red pandas, and the serene beauty of Asia.</p>
+                <a href=".html-admin/Ingresso.html" class="btn btn-custom">Explore Now</a>
+            </div>
+        </div>
+    </div>
 
     <footer>
         <p>&copy; 2025 Zoo Safari. All rights reserved.</p>
