--- a/.html/prova.html
+++ b/.html/prova.html
@@ -33,8 +33,9 @@
         .card-img-top {
             border-top-left-radius: 15px;
             border-top-right-radius: 15px;
-            max-height: none;
-            object-fit: contain;
+            object-fit: cover;
+            height: 200px;
+            width: 100%;
         }
         .btn-custom {
             background-color: #8BA255;
@@ -48,7 +49,10 @@
             background-color: #728C3F;
         }
         .row {
-            row-gap: 2rem;
+            row-gap: 20px;
+        }
+        .col-md-6 {
+            padding: 10px;
         }
         footer {
             text-align: center;
@@ -67,18 +71,18 @@
     <div class="container py-5">
         <div class="row">
             <div class="col-md-6 col-lg-4">
-                <div class="card text-center container-fluid">
+                <div class="card text-center">
                     <img src="../img/mappa zoo/africa.png" class="card-img-top" alt="Africa Zone">
                     <div class="card-body">
                         <h5 class="card-title">African Safari</h5>
                         <p class="card-text">Explore the wild savannas and meet majestic lions, elephants, and giraffes.</p>
-                        <a href="lavoratori.html" class="btn btn-custom">Learn More</a>
+                        <a href="lavoratori.html" class="btn btn-custom">Explore Now</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-6 col-lg-4">
-                <div class="card text-center container-fluid">
+                <div class="card text-center">
                     <img src="../img/mappa zoo/asian_passage.png" class="card-img-top" alt="Asia Zone">
                     <div class="card-body">
                         <h5 class="card-title">Asian Passage</h5>
@@ -89,18 +93,18 @@
             </div>
 
             <div class="col-md-6 col-lg-4">
-                <div class="card text-center container-fluid">
+                <div class="card text-center">
                     <img src="../img/mappa zoo/pleistocene.png" class="card-img-top" alt="Pleistocene Park">
                     <div class="card-body">
                         <h5 class="card-title">Pleistocene Park</h5>
                         <p class="card-text">Travel back in time and experience the wonders of the Ice Age.</p>
-                        <a href=".html-admin/Desert.html" class="btn btn-custom">Find Out More</a>
+                        <a href=".html-admin/Desert.html" class="btn btn-custom">Explore Now</a>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-6 col-lg-4">
-                <div class="card text-center container-fluid">
+                <div class="card text-center">
                     <img src="../img/mappa zoo/fallen_forset.png" class="card-img-top" alt="Fallen Forest">
                     <div class="card-body">
                         <h5 class="card-title">Fallen Forest Passage</h5>
@@ -111,7 +115,7 @@
             </div>
 
             <div class="col-md-6 col-lg-4">
-                <div class="card text-center container-fluid">
+                <div class="card text-center">
                     <img src="../img/mappa zoo/grizzly_gulch.png" class="card-img-top" alt="Grizzly Gulch">
                     <div class="card-body">
                         <h5 class="card-title">Grizzly Gulch Passage</h5>
@@ -122,10 +126,10 @@
             </div>
 
             <div class="col-md-6 col-lg-4">
-                <div class="card text-center container-fluid">
-                    <img src="../img/mappa zoo/verdino.png" class="card-img-top" alt="Asian Passage">
+                <div class="card text-center">
+                    <img src="../img/mappa zoo/asian_passage.png" class="card-img-top" alt="Asian Passage">
                     <div class="card-body">
-                        <h5 class="card-title">Ingresso</h5>
+                        <h5 class="card-title">Asian Passage</h5>
                         <p class="card-text">Discover exotic tigers, red pandas, and the serene beauty of Asia.</p>
                         <a href=".html-admin/Ingresso.html" class="btn btn-custom">Explore Now</a>
                     </div>
